--- a/index.html
+++ b/index.html
@@ -4,13 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test web</title>
+    <title>Animated card</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Test web1</h1>
-    <p>
-        dsfsd
-    </p>
-    <h2>website ka name </h2>
+    <div class="container">
+        <div class="card">
+            <img src="/images/cheeta.jpg" alt="cheeta">
+            <div class="intro">
+                <h1>cheetah</h1>
+                <p>The <span>Cheetah</span>  is a large cat native to africa and central Irun.It is the fastestland animal,capable of running at 80 to 128 km/h(50 to 80 mph).</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="/images/monkey.jpg" alt="monkey">
+            <div class="intro">
+                <h1>Mandrill</h1>
+                <p>The<span>  Monkey</span>  mandrill is a primated of the old world Monkey family .It is one of two species assigned to the genus mandrillus,along white the drill.</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="/images/white tiger.jpg" alt="whit tiger">
+            <div class="intro">
+                <h1>White Tiger</h1>
+                <p>The <span>white tiger</span>(also known as the white Bengal tiger)is a Subspecies of tiger,found throuthout the india Subcontinent.</p>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
